Fix issue with title spacing when width matches article column.

--- a/src/beeware_docs_tools/overrides/assets/stylesheets/beeware_theme.css
+++ b/src/beeware_docs_tools/overrides/assets/stylesheets/beeware_theme.css
@@ -302,6 +302,11 @@
     color: var(--md-typeset-color);
 }
 
+/* Fix issue with spacing when title is exactly the width of the article column */
+.md-typeset h1 a.headerlink {
+    display: none;
+}
+
 /* Link colors */
 .md-typeset a, .md-nav__link {
     color: light-dark(#084AFF, #526CFE);
